Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# Authors and Contributors to the Repository
 
-ABel Berhanu <abelberhanu6@gmail.com>
+Justice Boye <@Post-Boye: GitHub>
+Reginald Amuzu <@m00n-die: GitHub>
